virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: messaging-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"           
    port:
      number: 80
      name: http
      protocol: HTTP
                                                                                                                                                                                                          
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: messaging-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - messaging-gateway
  http:
    - route:
      - destination:
          host: frontend-service
          port:
            number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-service
spec:
  hosts:
  - frontend-service
  http:
  - route:
    - destination:
        host: frontend-service
        subset: v1
